[FIX] user corsConfigurationSource